--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,9 @@
+---
+import Navbar from "../components/Navbar.astro";
+import ContactUs from "../components/ContactUs.astro";
+import Footer from "../components/Footer.astro";
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -8,7 +14,10 @@
 		<title>Astro Basics</title>
 	</head>
 	<body>
+		<Navbar />
 		<slot />
+		<ContactUs />
+		<Footer />
 	</body>
 </html>
 
