--- a/src/pages/uslugi.astro
+++ b/src/pages/uslugi.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import '../styles/global.css';
 
-import uslugiImg from '../assets/homepage/img-1.png';
+import uslugiImg from '../assets/uslugi/top-img.png';
 
 export const metadata = {
   title: 'TwojaStrona.pl - Usługi',
