--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,13 +5,16 @@ import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="pl">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="description" content="Profesjonalne projektowanie stron internetowych, optymalizacja SEO i content marketing. Budujemy marki online i zwiększamy zasięg. Sprawdź nasze usługi!" />
+		<meta name="keywords" content="web design, SEO, projektowanie stron internetowych, content marketing, strony www, optymalizacja SEO, agencja marketingowa, responsive design" />
+    <meta name="author" content="Imię i nazwisko autora" />
+		<link rel="canonical" href="https://uek-astro-js.vercel.app/" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>UEK-Astro.js App</title>
 	</head>
 	<body>
 		<Navbar />
@@ -20,12 +23,3 @@ import Footer from "../components/Footer.astro";
 		<Footer />
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
