fix: change metadata

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import Footer from "../components/Footer.astro";
 		<meta name="viewport" content="width=device-width" />
 		<meta name="description" content="Profesjonalne projektowanie stron internetowych, optymalizacja SEO i content marketing. Budujemy marki online i zwiększamy zasięg. Sprawdź nasze usługi!" />
 		<meta name="keywords" content="web design, SEO, projektowanie stron internetowych, content marketing, strony www, optymalizacja SEO, agencja marketingowa, responsive design" />
-    <meta name="author" content="Imię i nazwisko autora" />
+    <meta name="author" content="TomDom" />
 		<link rel="canonical" href="https://uek-astro-js.vercel.app/" />
 		<meta name="generator" content={Astro.generator} />
 		<title>UEK-Astro.js App</title>
